--- a/site/_includes/shortcodes/photos.njk
+++ b/site/_includes/shortcodes/photos.njk
@@ -1,49 +1,4 @@
 <div class="photos">
-  <figure class="gallery-image">
-    <img
-      src="site/static/images/me.jpg" <!-- Corrected path separator for web -->
-      srcSet="site/static/images/me.jpg" <!-- Corrected path separator for web -->
-      alt="Description of your local photo" <!-- Update this as needed -->
-    />
-    <figcaption>
-      <!-- Removed caption content -->
-      <div class="gallery-links">
-        <a
-          class="gallery-fullsize-link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="site/static/images/me.jpg" <!-- Corrected path separator for web -->
-        >
-          open full size
-        </a>
-        <span class="gallery-credit">
-          Photo: <a href="https://your-credit-link.com">Your Credit</a> <!-- Update this as needed -->
-        </span>
-      </div>
-    </figcaption>
-  </figure>
-  <div class="gallery-options">
-    <h2 class="gallery-heading">
-      You can use this photo with credit:
-    </h2>
-    <ul class="gallery-thumbnails">
-      <li class="gallery-thumb">
-        <button
-          class="gallery-thumb-link"
-          data-sound-hover="pop"
-          data-sound-focus="pop"
-          data-sound-click="click"
-        >
-          <img
-            src="site/static/images/me.jpg" <!-- Corrected path separator for web -->
-            alt="Description of your local photo thumbnail" <!-- Update this as needed -->
-            data-public-id="local-photo" <!-- You can use any identifier you like -->
-            data-alt="Description of your local photo" <!-- Update this as needed -->
-            data-credit="Your Credit" <!-- Update this as needed -->
-            data-credit-link="https://your-credit-link.com" <!-- Update this as needed -->
-          />
-        </button>
-      </li>
-    </ul>
-  </div>
+  <img
+    src="/site/static/images/me.jpg"
 </div>
