updates photo bio icon

--- a/site/_includes/shortcodes/photos.njk
+++ b/site/_includes/shortcodes/photos.njk
@@ -1,3 +1,3 @@
 <div class="photos">
-<img src="/site/static/images/me.jpg" alt="A description of your photo" />
+<img src="https://github.com/user-attachments/assets/f6b0c3a3-c7f7-4a91-9f5e-0f8e9e9a0c18" alt="A description of your photo" />
 </div>
