--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -892,12 +892,12 @@ main.home {
   grid-template-columns: repeat(3, 60px);
   justify-content: center;
   list-style: none;
-  margin: 0;
+  margin: 0 0 0 90px;
   padding: 0;
 }
 
 .bio-profile {
-  margin: 0;
+  display: inline-block;
 }
 
 .bio-link {
