--- a/site/_includes/shortcodes/learning.njk
+++ b/site/_includes/shortcodes/learning.njk
@@ -1,8 +1,8 @@
 <section id="teaching" class="block learning-block">
   <div class="block-intro">
-    <h2>Jason makes learning fun &amp; approachable.</h2>
+    <h2>WORK WITH RK</h2>
     <p class="lede">
-      Jason has been teaching developers of all skill levels how to code for over a decade. He specializes in live coding, simplifying complex topics into relatable analogies and demos, and shoehorning corgi references into every project.
+      Some Projects I Have Worked on
     </p>
   </div>
   <ul class="platforms">
@@ -10,7 +10,7 @@
     <li class="platform">
       <a href="{{ platform.link }}" class="platform-link">
         <img
-          src="https://res.cloudinary.com/jlengstorf/image/upload/q_auto,f_auto,w_400,c_fill/jason.energy/{{ platform.image }}.jpg"
+          src="{{ platform.image }}"
           alt="{{ platform.label }}"
         />
       </a>
