--- a/site/_includes/default.njk
+++ b/site/_includes/default.njk
@@ -184,12 +184,12 @@
     {% endblock %}
 
     <footer>
-      <span class="boops">powered by boops</span>
+      <span class="boops">copyright@RK 2024</span>
       <nav class="footer-nav">
       {% for link in nav %}
         <a href="{{ link.url }}">{{ link.label }}</a>
       {% endfor %}
-        <a href="https://github.com/jlengstorf/jason.energy">source code</a>
+        <a href="https://github.com/sinisterdaddy/PORTFOLIO11ty">source code</a>
       </nav>
     </footer>
 
