--- a/site/_includes/shortcodes/subscribe.njk
+++ b/site/_includes/shortcodes/subscribe.njk
@@ -1,8 +1,8 @@
-<section id="newsletter" class="block subscribe-block">
+<section id="contact" class="block contact-block">
   <div class="block-intro">
-    <h2>Get booped on the brain.</h2>
+    <h2>Contact Me</h2>
     <p class="lede">
-      Jason believes in lifelong learning and continuous improvement. In his newsletter, he shares his experience — both technical and otherwise — in hopes of connecting with more lifelong learners and building a community of practice.
+      If you have any questions or just want to reach out, feel free to drop a message. I look forward to connecting with you!
     </p>
   </div>
 
