--- a/site/index.njk
+++ b/site/index.njk
@@ -1,7 +1,7 @@
 {% extends "default.njk" %}
 
 {% block seo %}
-<title>A Very Jason Lengstorf Website — Powered By Boops!</title>
+<title>Radha Krishna Garg</title>
 
 <link rel="canonical" href="{{ siteUrl }}/" />
 <meta name="description" content="Jason Lengstorf works at Netlify and hosts Learn With Jason. He is trying his very best to follow his own advice. He lives in Portland, Oregon." />
