--- a/site/_includes/post-list.njk
+++ b/site/_includes/post-list.njk
@@ -1,18 +1,9 @@
 {% extends "default.njk" %}
 
 {% block seo %}
-<title>I’ve written {{ collections.posts | length }} posts about how I stopped being such a dingus.</title>
-
-<link rel="canonical" href="{{ siteUrl }}/{{slug}}/" />
-<meta name="description" content="{{description}}" />
+  <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1hz09vhaDLAxZTwLHYTnlUySjdsT3UJkY/view" />
 {% endblock %}
 
 {% block heading %}
-
-<div class="heading post-list">
-  <h1>I’ve written {{ collections.posts | length }} posts about how I stopped being such a dingus.</h1>
-  <p class="lede">{{description}}</p>
-</div>
-
+  <!-- No content needed here since it's a redirect -->
 {% endblock %}
-
