--- a/site/_includes/shortcodes/newsletter-form.njk
+++ b/site/_includes/shortcodes/newsletter-form.njk
@@ -2,23 +2,18 @@
   <div class="opt-in-image">
     <img loading="lazy" src="https://res.cloudinary.com/jlengstorf/image/upload/q_auto,f_auto,c_fill,w_280,h_296/jason.energy/opt-in.jpg" alt="Illustration of a letter with a heart on the top flap." />
   </div>
-  <form action="/api/send-message" method="POST">
+  <form action="/api/contact" method="POST">
     <label for="firstName">First Name</label>
     <input id="firstName" name="firstName" type="text" required />
-    
     <label for="email">Email</label>
     <input id="email" name="email" type="email" required />
-
-    <label for="message">Message</label>
-    <textarea id="message" name="message" required></textarea>
-    
     <button 
       type="submit"
       data-sound-hover="pop"
       data-sound-focus="pop"
       data-sound-click="hooray"
     >
-      Send Message
+      Subscribe
     </button>
     <p class="notice"><small>I will never share your personal information because I'm not a jerk.</small></p>
   </form>
