--- a/site/_includes/default.njk
+++ b/site/_includes/default.njk
@@ -99,7 +99,7 @@
         <button class="exploding-nav-button">
           <img
             class="face"
-            src="https://res.cloudinary.com/jlengstorf/image/upload/q_auto,f_auto/jason.energy/jason-brains.png"
+            src="https://github.com/user-attachments/assets/cca2f6e0-8f3d-4899-a2b4-a3918cfca5ec"
             alt=""
           />
           <span class="sr-only">Show Navigation</span>
