--- a/site/index.njk
+++ b/site/index.njk
@@ -4,19 +4,19 @@
 <title>Radha Krishna Garg</title>
 
 <link rel="canonical" href="{{ siteUrl }}/" />
-<meta name="description" content="Jason Lengstorf works at Netlify and hosts Learn With Jason. He is trying his very best to follow his own advice. He lives in Portland, Oregon." />
+<meta name="description" content="Rk Works Hard" />
 <meta name="image" content="https://www.google.com/imgres?q=illuminati%20image&imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-vector%2Fall-seeing-eye-god-illuminati-260nw-2441368937.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Filluminati&docid=h7846n7R4YMhBM&tbnid=O679NUvSrrAi-M&vet=12ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA..i&w=260&h=280&hcb=2&ved=2ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA" />
 
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ siteUrl }}/" />
-<meta property="og:description" content="Jason Lengstorf works at Netlify and hosts Learn With Jason. He is trying his very best to follow his own advice. He lives in Portland, Oregon." />
+<meta property="og:description" content="Rk Works Hard" />
 <meta property="og:image" content="https://www.google.com/imgres?q=illuminati%20image&imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-vector%2Fall-seeing-eye-god-illuminati-260nw-2441368937.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Filluminati&docid=h7846n7R4YMhBM&tbnid=O679NUvSrrAi-M&vet=12ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA..i&w=260&h=280&hcb=2&ved=2ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA" />
 
 <meta name="twitter:dnt" content="on" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@jlengstorf" />
 <meta name="twitter:title" content="A Very Jason Lengstorf Website — Powered By Boops!" />
-<meta name="twitter:description" content="Jason Lengstorf works at Netlify and hosts Learn With Jason. He is trying his very best to follow his own advice. He lives in Portland, Oregon." />
+<meta name="twitter:description" content="Rk Works Hard" />
 <meta name="twitter:image" content="https://www.google.com/imgres?q=illuminati%20image&imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-vector%2Fall-seeing-eye-god-illuminati-260nw-2441368937.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Filluminati&docid=h7846n7R4YMhBM&tbnid=O679NUvSrrAi-M&vet=12ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA..i&w=260&h=280&hcb=2&ved=2ahUKEwj_ltGznY6IAxXPrlYBHbFgEA8QM3oECBgQAA" />
 {% endblock %}
 
