--- a/site/index.njk
+++ b/site/index.njk
@@ -5,19 +5,19 @@
 
 <link rel="canonical" href="{{ siteUrl }}/" />
 <meta name="description" content="Rk Works Hard" />
-<meta name="image" content="site/static/images/b.jpeg" />
+<meta name="image" content="https://github.com/sinisterdaddy/Extras/blob/main/b.jpeg" />
 
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ siteUrl }}/" />
 <meta property="og:description" content="Rk Works Hard" />
-<meta property="og:image" content="site/static/images/b.jpeg" />
+<meta property="og:image" content="https://github.com/sinisterdaddy/Extras/blob/main/b.jpeg" />
 
 <meta name="twitter:dnt" content="on" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@jlengstorf" />
 <meta name="twitter:title" content="A Very Jason Lengstorf Website — Powered By Boops!" />
 <meta name="twitter:description" content="Rk Works Hard" />
-<meta name="twitter:image" content="site/static/images/b.jpeg" />
+<meta name="twitter:image" content="https://github.com/sinisterdaddy/Extras/blob/main/b.jpeg" />
 {% endblock %}
 
 {% block main %}
