--- a/site/_includes/default.njk
+++ b/site/_includes/default.njk
@@ -75,9 +75,8 @@
           title="RSS Feed for jason.energy" 
           href="/feed.xml" />
 
-    <link href="https://hachyderm.io/@jlengstorf" rel="me" />
-    <link href="https://twitter.com/jlengstorf" rel="me" />
-    <link href="https://github.com/jlengstorf" rel="me" />
+    <link href="https://twitter.com/im_rkgarg" rel="me" />
+    <link href="https://github.com/sinisterdaddy" rel="me" />
   </head>
 
   <body class="{{ bodyClass }}">
